Apache fix for ubuntu

--- a/templates/virtualhost/vhost.conf.erb
+++ b/templates/virtualhost/vhost.conf.erb
@@ -62,4 +62,8 @@
     Alias <%= @aliases %>
 <% end -%>
 <% end -%>
+    <Directory />
+        Require all granted
+        AllowOverride All
+    </Directory>
 </VirtualHost>
